Argument checking and usage message added