@@ -5,12 +5,17 @@ if defined SFHOME goto continue1
   set SFHOME=%cd%
   cd bin
 :continue1
+if defined SFPRIVATE goto continue2
+  set SFPRIVATE=%SFHOME%\private
+:continue2
 if NOT (%1)==() GOTO check1
 :run
-if exist "%SFHOME%\jre\bin\java.exe" set path=%SFHOME%\jre\bin
-call %SFHOME%\bin\setClassPath
+set CLASSPATH=%SFHOME%\signedLib\smartfrog.jar;%SFHOME%\signedLib\sfServices.jar;%SFHOME%\signedLib\sfTestCases.jar;%CLASSPATH%  
+set SERVER=localhost:8080
+rem Please edit codebase if you have any other jar file in webserver 
+set CODEBASE="http://%SERVER%/sfExamples.jar" 
 
-java -Dorg.smartfrog.iniFile=%SFHOME%\bin\default.ini org.smartfrog.SFSystem %1 %2 %3 %4 %5 %6 %7 %8 %9
+java -Djava.security.manager -Djava.security.policy==%SFHOME%\private\sf.policy -Dorg.smartfrog.sfcore.security.keyStoreName=%SFPRIVATE%\mykeys.st -Dorg.smartfrog.sfcore.security.propFile=%SFPRIVATE%\SFSecurity.properties -Dorg.smartfrog.codebase=%CODEBASE% org.smartfrog.SFSystem %1 %2 %3 %4 %5 %6 %7 %8 %9
 GOTO end
 :check1
 if NOT (%1)==(-a) GOTO check2
