@@ -5,12 +5,15 @@ if defined SFHOME goto continue1
   set SFHOME=%cd%
   cd bin
 :continue1
+
+if defined SFPRIVATE goto continue2
+  set SFPRIVATE=%SFHOME%\private
+:continue2
+
 if NOT (%1)==() GOTO check1
 :run
-if exist "%SFHOME%\jre\bin\java.exe" set path=%SFHOME%\jre\bin
-call %SFHOME%\bin\setClassPath
-
-java -Dorg.smartfrog.iniFile=%SFHOME%\bin\default.ini org.smartfrog.SFSystem %1 %2 %3 %4 %5 %6 %7 %8 %9
+call %SFHOME%\bin\security\setClassPath
+java -Djava.security.policy==%SFHOME%\private\sf.policy -Djava.security.manager -Dorg.smartfrog.sfcore.security.keyStoreName=%SFPRIVATE%\mykeys.st -Dorg.smartfrog.sfcore.security.propFile=%SFPRIVATE%\SFSecurity.properties org.smartfrog.SFSystem %1 %2 %3 %4 %5 %6 %7 %8 %9
 GOTO end
 :check1
 if NOT (%1)==(-a) GOTO check2
